--- a/assets/css/profilPrivate.css
+++ b/assets/css/profilPrivate.css
@@ -9,5 +9,233 @@
   color: #f2f2f2;
 }
 body {
-  background-color: #151b27;
+    background-color: #151b27;
 }
+main{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+
+}
+
+
+
+
+
+
+/* INFO GENERAL */
+/* .container-info-profil{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.info-general{
+    width: 90%;
+}
+.general{
+    
+    
+}
+h2{
+    
+} */
+
+
+
+
+
+.container-cta {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  .cta {
+    font-size: 1.2rem;
+    width: 250px;
+    height: 50px;
+    margin: 30px 0 100px;
+    border-radius: 25px;
+    color: rgb(158, 219, 52);
+    background-color: #001c61;
+    box-shadow: 0 0 20px rgb(158, 219, 52);
+    transition: all 0.3s ease, box-shadow 0.3s ease;
+    border: none;
+  }
+  
+  .cta:active {
+    transform: translateY(1px);
+    box-shadow: 0 0 10px 2px rgb(158, 219, 52);
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+.history-tournament-profil{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+
+}
+/* CARD TOURNAMENT */
+
+.card-tournament {
+    display: flex;
+    flex-wrap: wrap;
+    width: 325px;
+    height: 425px;
+    max-width: 100%;
+    margin: 2rem 0.5rem;
+    background-color: #232f65;
+    align-content: flex-start;
+    border-radius: 10px;
+    box-shadow: 0 5px 25px 2px rgb(0, 0, 0, 85%);
+  }
+  .card-tournament:hover{
+    cursor: pointer;
+    box-shadow: 0 0 20px 1px rgb(158, 219, 52, 0.1);
+    transition: all 0.3s ease;
+    transform: translateY(2px);
+    
+  }
+  .banner-card-tournament {
+    width: 100%;
+    height: 30%;
+    background-image: url("../img/General/MiniBannière-lol323x100.webp");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 10px;
+  }
+  
+  .card-tournament h4 {
+    width: 90%;
+    font-size: 1.2rem;
+    margin: 15px 5px;
+  }
+  .card-tournament h5 {
+    margin-left: 10px;
+    font-weight: 400;
+    font-size: 1rem;
+  }
+  .card-tournament h6 {
+    margin-left: 10px;
+    font-weight: 500;
+  
+    font-size: 1.2rem;
+  }
+  .info-date-tournament {
+    width: 90%;
+    margin: 40px auto 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .info-date-tournament p {
+    font-size: 0.8rem;
+    margin: 0 6px;
+    text-align: center;
+  }
+  .info-date-tournament p:last-child {
+    min-width: 25%;
+    height: 24px;
+    background-color: #20a55c;
+    font-size: 11px;
+    padding-top: 6px;
+    border-radius: 15px;
+  }
+  .divider-card {
+    width: 100%;
+    height: 1px;
+    margin: 20px 0;
+    background-color: rgb(0, 0, 0, 50%);
+  }
+
+  
+@media (min-width: 768px) {
+    .history-tournament-profil{
+        width: 80%;
+    }
+}
+@media (min-width: 1024px)  {
+    .history-tournament-profil{
+        width: 85%;
+    }    
+
+}
+@media (min-width: 1300px)  {
+}
+@media (min-width: 1595px) {
+
+
+    
+      /* CARD TOURNAMENT */
+  .card-tournament {
+    width: 350px;
+    height: 500px;
+    margin: 25px 20px;
+  }
+
+  .card-tournament h4 {
+    font-size: 21px;
+    margin: 30px 15px;
+  }
+  .card-tournament h5 {
+    margin-left: 20px;
+    font-size: 16px;
+  }
+  .card-tournament h6 {
+    margin-left: 20px;
+    font-weight: 500;
+
+    font-size: 22px;
+  }
+  .info-date-tournament {
+    width: 90%;
+    margin: 20px auto 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .info-date-tournament p {
+    font-size: 18px;
+    margin: 0 6px;
+  }
+  .info-date-tournament p:last-child {
+    min-width: 25%;
+    height: 35px;
+    font-size: 16px;
+    padding-top: 8px;
+    border-radius: 15px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+/* 
+@media (min-width: 768px) {
+}
+@media (min-width: 1024px)  {
+}
+@media (min-width: 1300px)  {
+}
+@media (min-width: 1595px) {
+} */
