--- a/assets/css/profilPrivate.css
+++ b/assets/css/profilPrivate.css
@@ -9,178 +9,326 @@
   color: #f2f2f2;
 }
 body {
-    background-color: #151b27;
+  background-color: #151b27;
 }
-main{
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-
-}
-
-
-
-
-
-
-/* INFO GENERAL */
-/* .container-info-profil{
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-.info-general{
-    width: 90%;
-}
-.general{
-    
-    
+main {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
 }
 h2{
-    
-} */
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+}
 
 
+/* PHOTO DE PROFIL */
+.container-banner-photo{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+}
+.banner-photo-profil {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+  padding-top: 100px;
+}
+.photo {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 128px;
+  height: 128px;
+  border-radius: 50%;
+  background-color: rgb(242, 242, 242, 0.2);
+  position: relative;
+  top: 20px;
+}
+.photo img{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
 
 
+.photo input {
+  width: 100%;
+  height: 100%;
+  display: none;
+}
 
-.container-cta {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-  }
-  .cta {
-    font-size: 1.2rem;
-    width: 250px;
-    height: 50px;
-    margin: 30px 0 100px;
-    border-radius: 25px;
-    color: rgb(158, 219, 52);
-    background-color: #001c61;
-    box-shadow: 0 0 20px rgb(158, 219, 52);
-    transition: all 0.3s ease, box-shadow 0.3s ease;
-    border: none;
-  }
+/* BANNIERE DE PROFIL */
+.banner {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 160px;
   
-  .cta:active {
-    transform: translateY(1px);
-    box-shadow: 0 0 10px 2px rgb(158, 219, 52);
-  }
+  
+}
+#banner-profil {
+  width: 90%;
+  height: 100%;
+  background-color: rgb(242, 242, 242, 0.1);
+  
+}
 
+.banner input{
+  display: none;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-.history-tournament-profil{
+            /* ***********CONTAINER INFOS**********  */
+option{
+  color: black;
+}
+.container-info-profil{
+    width: 100%;
+    height: auto;    
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 100%;
+    margin-top: 80px;
+}
+.info-general{
+  width: 90%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  
+}
 
+.box-info{
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  margin-bottom: 20px;
+  background-color: #232F65;
+  border: 1px solid black;
+  box-shadow: 0 0 15px rgb(0, 0, 0, 55%);  
+    
+}
+.title-container-profil{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 40px;
+  font-size: 18px;
+  background-color: #28303F;
+  border-bottom: 1px solid black;
+  font-weight: 500;
+  padding: 0 10px 0 10px;
+  margin-bottom: 10px;
+}
+label{
+  width: 90%;
+}
+input, select{
+  width: 90%;
+  height: 30px;
+  margin: 5px 0 15px;
+  color: black;
+}
+.container-cta {
+  width: 100%;
+  
+  display: flex;
+  justify-content: center;
+}
+.cta {
+  font-size: 1rem;
+  width: 200px;
+  height: 25px;
+  margin: 20px 0 20px;
+  border-radius: 25px;
+  color: rgb(158, 219, 52);
+  background-color: #001c61;
+  box-shadow: 0 0 20px rgb(158, 219, 52);
+  transition: all 0.3s ease, box-shadow 0.3s ease;
+  border: none;
+}
+
+.cta:active {
+  transform: translateY(1px);
+  box-shadow: 0 0 10px 2px rgb(158, 219, 52);
+}
+
+           /* ****FIN DE CONTAINER INFO******* */
+
+/* DEBUT HISTORIQUE TOURNOIS */
+.container-history{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.history-tournament-profil {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  
+  width: 100%;
+}
+.container-card{
+  width: 90%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: #232F65;
 }
 /* CARD TOURNAMENT */
 
 .card-tournament {
-    display: flex;
-    flex-wrap: wrap;
-    width: 325px;
-    height: 425px;
-    max-width: 100%;
-    margin: 2rem 0.5rem;
-    background-color: #232f65;
-    align-content: flex-start;
-    border-radius: 10px;
-    box-shadow: 0 5px 25px 2px rgb(0, 0, 0, 85%);
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 325px;
+  height: 425px;
+  width: 90%;
+  margin: 2rem 0.5rem;
+  background-color: #232f65;
+  align-content: flex-start;
+  border-radius: 10px;
+  box-shadow: 0 5px 25px 2px rgb(0, 0, 0, 85%);
+}
+.card-tournament:hover {
+  cursor: pointer;
+  box-shadow: 0 0 20px 1px rgb(158, 219, 52, 0.1);
+  transition: all 0.3s ease;
+  transform: translateY(2px);
+}
+.banner-card-tournament {
+  width: 100%;
+  height: 30%;
+  background-image: url("../img/General/MiniBannière-lol323x100.webp");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.card-tournament h4 {
+  width: 90%;
+  font-size: 1.2rem;
+  margin: 15px 5px;
+}
+.card-tournament h5 {
+  margin-left: 10px;
+  font-weight: 400;
+  font-size: 1rem;
+}
+.card-tournament h6 {
+  margin-left: 10px;
+  font-weight: 500;
+
+  font-size: 1.2rem;
+}
+.info-date-tournament {
+  width: 90%;
+  margin: 40px auto 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.info-date-tournament p {
+  font-size: 0.8rem;
+  margin: 0 6px;
+  text-align: center;
+}
+.info-date-tournament p:last-child {
+  min-width: 25%;
+  height: 24px;
+  background-color: #20a55c;
+  font-size: 11px;
+  padding-top: 6px;
+  border-radius: 15px;
+}
+.divider-card {
+  width: 100%;
+  height: 1px;
+  margin: 20px 0;
+  background-color: rgb(0, 0, 0, 50%);
+}
+
+@media (min-width: 768px) {
+  .banner-photo-profil{
+    width: 80%;
   }
-  .card-tournament:hover{
-    cursor: pointer;
-    box-shadow: 0 0 20px 1px rgb(158, 219, 52, 0.1);
-    transition: all 0.3s ease;
-    transform: translateY(2px);
+  .banner img{
+    max-width: 750px;
+  }
+
+  .container-history{
+    width: 80%;
     
   }
-  .banner-card-tournament {
+  .history-tournament-profil {
     width: 100%;
-    height: 30%;
-    background-image: url("../img/General/MiniBannière-lol323x100.webp");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 10px;
+    max-width: 1300px;
+    
   }
-  
-  .card-tournament h4 {
-    width: 90%;
-    font-size: 1.2rem;
-    margin: 15px 5px;
+  .container-info-profil{
+    width: 80%;
   }
-  .card-tournament h5 {
-    margin-left: 10px;
-    font-weight: 400;
-    font-size: 1rem;
+  .dropdown{
+    display: none;
   }
-  .card-tournament h6 {
-    margin-left: 10px;
-    font-weight: 500;
-  
-    font-size: 1.2rem;
+  .info-general{
+    width: 100%;
+    max-width: 1300px;
   }
-  .info-date-tournament {
-    width: 90%;
-    margin: 40px auto 0;
-    display: flex;
+  .container-general{
+    width: 100%;
+  }
+  .container-card{
+    width: 94%;
     justify-content: center;
-    align-items: center;
   }
-  .info-date-tournament p {
-    font-size: 0.8rem;
-    margin: 0 6px;
-    text-align: center;
+  .box-info{
+    width: 46%;
+    margin: 1%;
   }
-  .info-date-tournament p:last-child {
-    min-width: 25%;
-    height: 24px;
-    background-color: #20a55c;
-    font-size: 11px;
-    padding-top: 6px;
-    border-radius: 15px;
-  }
-  .divider-card {
-    width: 100%;
-    height: 1px;
-    margin: 20px 0;
-    background-color: rgb(0, 0, 0, 50%);
+}
+@media (min-width: 1024px) {
+  .banner-photo-profil{
+    width: 85%;
   }
 
-  
-@media (min-width: 768px) {
-    .history-tournament-profil{
-        width: 80%;
-    }
-}
-@media (min-width: 1024px)  {
-    .history-tournament-profil{
-        width: 85%;
-    }    
+  .container-history{
+    width: 85%;
+    
+  }
+
+  .container-info-profil{
+    width: 85%;
+  }
 
 }
-@media (min-width: 1300px)  {
+@media (min-width: 1300px) {
+
+  .photo {
+
+    width: 158px;
+    height: 158px;
+  }
+  .banner{
+    height: 260px;
+  }
 }
 @media (min-width: 1595px) {
 
-
-    
-      /* CARD TOURNAMENT */
+  /* CARD TOURNAMENT */
   .card-tournament {
     width: 350px;
     height: 500px;
@@ -220,15 +368,6 @@ h2{
     border-radius: 15px;
   }
 }
-
-
-
-
-
-
-
-
-
 
 /* 
 @media (min-width: 768px) {
