--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -180,6 +180,7 @@ header {
   font-size: 2.3rem;
   text-align: center;
   line-height: 4rem;
+  text-shadow: 1px 1px 25px rgb(158, 219, 52, 0.5);
 }
 .container-header h2 {
   width: 90%;
@@ -188,6 +189,7 @@ header {
   font-size: 1.5rem;
   font-weight: 400;
   line-height: 2rem;
+  text-shadow: 1px 1px 25px rgb(158, 219, 52, 0.5);
 }
 .img-banner {
   width: 100%;
@@ -298,6 +300,7 @@ option:hover {
   align-content: flex-start;
   border-radius: 10px;
   box-shadow: 0 5px 25px 2px rgb(0, 0, 0, 85%);
+  text-shadow: 1px 1px 5px rgb(14, 3, 3);
 }
 .card-tournament:hover{
   cursor: pointer;
@@ -585,6 +588,7 @@ footer a {
     width: 350px;
     height: 500px;
     margin: 25px 20px;
+    
   }
 
   .card-tournament h4 {
