--- a/assets/css/formLogin.css
+++ b/assets/css/formLogin.css
@@ -18,13 +18,12 @@ body {
   background-repeat: no-repeat;
   display: flex;
   justify-content: center;
-
 }
 
 p {
   text-align: center;
 }
-a:visited{
+a:visited {
   color: rgb(158, 219, 52);
 }
 
@@ -41,9 +40,8 @@ a:visited{
   transition: box-shadow 1s;
   position: fixed;
 }
-.containerLogin:hover{
+.containerLogin:hover {
   box-shadow: 0 0 35px 5px rgba(158, 219, 52);
-
 }
 
 .logoLogin {
@@ -92,7 +90,7 @@ a:visited{
 
 .containerFormLogin form button:active {
   transform: translateY(1px);
-  box-shadow: 0 0 10px 2px rgb(158, 219, 52)
+  box-shadow: 0 0 10px 2px rgb(158, 219, 52);
 }
 
 input::placeholder {
