--- a/assets/css/createAndModificationTournament.css
+++ b/assets/css/createAndModificationTournament.css
@@ -20,6 +20,7 @@ body {
 
 h1 {
   width: 90%;
+  max-width: 400px;
   padding: 110px 0 40px;
   font-weight: 400;
   font-size: 21px;
@@ -206,9 +207,13 @@ p {
 }
 @media (min-width: 768px) {
   h1 {
-    width: 85%;
-    margin-left: 25%;
-    padding: 50px 0px;
+    display: flex;
+    justify-content: flex-start;
+    margin: 0;
+    width: 81%;
+    max-width: none;
+    
+    padding: 50px 0;
   }
   .dropdown {
     display: none;
