--- a/assets/css/SignUp.css
+++ b/assets/css/SignUp.css
@@ -8,7 +8,7 @@
   font-family: "Roboto Condensed", sans-serif;
   font-optical-sizing: auto;
   color: #f2f2f2;
-}
+  text-shadow: 0 0 10px rgb(0, 0, 0);}
 body {
   height: 110vh;
   width: 100%;
