--- a/assets/css/createAndModificationTournament.css
+++ b/assets/css/createAndModificationTournament.css
@@ -10,7 +10,7 @@
   font-family: "Roboto Condensed", sans-serif;
   font-optical-sizing: auto;
   color: #f2f2f2;
-}
+  text-shadow: 0 0 10px rgb(0, 0, 0);}
 body {
   background-color: #151b27;
   min-height: 100vh;
