--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -8,6 +8,7 @@
   font-family: "Roboto Condensed", sans-serif;
   font-optical-sizing: auto;
   color: #f2f2f2;
+  text-shadow: 0 0 10px rgb(0, 0, 0);
 }
 body {
   background-color: #151b27;
@@ -288,17 +289,22 @@ option:hover {
 /* CARD TOURNAMENT */
 
 .card-tournament {
-  display: flex;
-  flex-wrap: wrap;
   width: 325px;
   height: 425px;
   max-width: 100%;
   margin: 2rem 0.5rem;
   background-color: #232f65;
-  align-content: flex-start;
   border-radius: 10px;
   box-shadow: 0 5px 25px 2px rgb(0, 0, 0, 85%);
   text-shadow: 1px 1px 5px rgb(14, 3, 3);
+}
+.card-tournament a {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
 }
 .card-tournament:hover {
   cursor: pointer;
