--- a/assets/css/organisedTournament.css
+++ b/assets/css/organisedTournament.css
@@ -7,7 +7,7 @@
   font-family: "Roboto Condensed", sans-serif;
   font-optical-sizing: auto;
   color: #f2f2f2;
-}
+  text-shadow: 0 0 10px rgb(0, 0, 0);}
 body {
     width: 100%;
     background-color: #151b27;
@@ -46,18 +46,23 @@ h1{
 /* CARD TOURNAMENT */
 
 .card-tournament {
-    display: flex;
-    flex-wrap: wrap;
-    width: 325px;
-    height: 425px;
-    max-width: 100%;
-    margin: 2rem 0.5rem;
-    background-color: #232f65;
-    align-content: flex-start;
-    border-radius: 10px;
-    box-shadow: 0 5px 25px 2px rgb(0, 0, 0, 85%);
-    text-shadow: 1px 1px 5px rgb(14, 3, 3);
-  }
+  width: 325px;
+  height: 425px;
+  max-width: 100%;
+  margin: 2rem 0.5rem;
+  background-color: #232f65;
+  border-radius: 10px;
+  box-shadow: 0 5px 25px 2px rgb(0, 0, 0, 85%);
+  text-shadow: 1px 1px 5px rgb(14, 3, 3);
+}
+.card-tournament a {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+}
   .card-tournament:hover {
     cursor: pointer;
     box-shadow: 0 0 20px 1px rgb(158, 219, 52, 0.1);
@@ -77,7 +82,7 @@ h1{
   .card-tournament h4 {
     width: 90%;
     font-size: 1.2rem;
-    margin: 15px 5px;
+    margin: 15px 5px ;
   }
   .card-tournament h5 {
     margin-left: 10px;
