--- a/assets/css/profilPrivate.css
+++ b/assets/css/profilPrivate.css
@@ -7,7 +7,7 @@
   font-family: "Roboto Condensed", sans-serif;
   font-optical-sizing: auto;
   color: #f2f2f2;
-}
+  text-shadow: 0 0 10px rgb(0, 0, 0);}
 body {
   background-color: #151b27;
 }
@@ -334,12 +334,12 @@ input, select{
   }
 
   .container-history{
-    width: 85%;
+    width: 80%;
     
   }
 
   .container-info-profil{
-    width: 85%;
+    width: 80%;
   }
 
 }
@@ -393,6 +393,13 @@ input, select{
     font-size: 16px;
     padding-top: 8px;
     border-radius: 15px;
+  }
+  .container-history{
+    width: 85%;
+    
+  }
+  .container-info-profil{
+    width: 85%;
   }
 }
 
