--- a/assets/css/tournamentSheet.css
+++ b/assets/css/tournamentSheet.css
@@ -7,6 +7,7 @@
   font-family: "Roboto Condensed", sans-serif;
   font-optical-sizing: auto;
   color: #f2f2f2;
+  text-shadow: 0 0 10px rgb(0, 0, 0);
 }
 body {
   background-color: #151b27;
@@ -25,7 +26,10 @@ h1{
   margin: 0 auto;
   padding-left: 2rem;
 }
-
+/* TOGGLE MENU DEROULANT  */
+.active-sheet-tournament{
+  display: none;
+}
 
 /* MAIN Container feuille de tournoi */
 .main-container-tournament-sheet{
@@ -40,6 +44,8 @@ h1{
   max-width: 450px;
   margin-top: 2rem;
   background-color: #232F65;
+  border: 1px solid black;
+  box-shadow: 0 0 15px rgb(0, 0, 0, 55%);
 
 }
 
@@ -108,11 +114,20 @@ h4{
   margin-left: 10px;
 }
 /* DIVIDER  horizontal BOX INFO GENERALE */
+.divider-sheet-tournament-first{
+  width: 90%;
+  height: 2px;
+  background-color: #fff;
+  margin: 50px auto 50px;
+}
 .divider-sheet-tournament{
   width: 75%;
   height: 2px;
   background-color: #fff;
-  margin: 20px auto;
+  margin: 50px auto;
+}
+.container-info .divider-sheet-tournament:nth-child(1){
+  margin-top: 50px auto;
 }
 /* BOX DES DESCRIPTION TITRE ET REGLES  */
 .description-tournament{
@@ -182,10 +197,60 @@ h4{
   width: 100%;
   overflow: auto;
 }
+/* FOOTER */
+footer {
+  width: 100%;
+  height: 40vh;
+  background-color: #1e283d;
+  text-align: center;
+  padding-top: 15px;
+  display: flex;
+  justify-content: flex-end;
+}
+footer h3 {
+  font-size: 21px;
+}
+.container-footer {
+  width: 100%;
+  height: 100%;
+}
+.contact {
+  height: 80%;
+}
+.divider-footer {
+  width: 50%;
+  height: 2px;
+  background: #f2f2f2;
+  margin: 10px auto;
+}
+footer p {
+  font-size: 1rem;
+  margin: 8px 0;
+}
+footer a {
+  margin-bottom: 20px;
+  margin-right: 10px;
+}
+
+.copyright {
+  width: 100%;
+  height: 20%;
+  background-color: #151b27;
+  display: flex;
+  align-items: center;
+}
+.copyright p {
+  width: 100%;
+  font-size: 0.8rem;
+  text-align: center;
+}
 
 
 
 @media (min-width: 768px) {
+  .dropdown{
+    display: none;
+  }
  h1{
   width: 60%;
   max-width: 850px;
@@ -244,6 +309,11 @@ h4{
   width: 50%;;
 }
 
+footer{
+  width: 60%;
+  margin: auto;
+}
+
 }
 @media (min-width: 1024px)  {
   .info-general-tournament-sheet{
@@ -253,6 +323,10 @@ h4{
   .container-structure-tournament{
     max-width: 650px;
     width: 55%;
+  }
+  footer{
+    width: 70%;
+    margin: auto;
   }
   
   
