--- a/assets/css/profilPrivate.css
+++ b/assets/css/profilPrivate.css
@@ -201,17 +201,22 @@ input, select{
 /* CARD TOURNAMENT */
 
 .card-tournament {
-  display: flex;
-  flex-wrap: wrap;
-  max-width: 325px;
+  width: 325px;
   height: 425px;
-  width: 90%;
+  max-width: 100%;
   margin: 2rem 0.5rem;
   background-color: #232f65;
-  align-content: flex-start;
   border-radius: 10px;
-  text-shadow: 1px 1px 5px rgb(14, 3, 3);
   box-shadow: 0 5px 25px 2px rgb(0, 0, 0, 85%);
+  text-shadow: 1px 1px 5px rgb(14, 3, 3);
+}
+.card-tournament a {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
 }
 .card-tournament:hover {
   cursor: pointer;
