--- a/assets/css/organised&SubTournament.css
+++ b/assets/css/organised&SubTournament.css
@@ -7,40 +7,37 @@
   font-family: "Roboto Condensed", sans-serif;
   font-optical-sizing: auto;
   color: #f2f2f2;
-  text-shadow: 0 0 10px rgb(0, 0, 0);}
+  text-shadow: 0 0 10px rgb(0, 0, 0);
+}
 body {
-    width: 100%;
-    background-color: #151b27;
-  }
+  width: 100%;
+  background-color: #151b27;
+}
 
 /* SECTION MAIN */
-.main-container-organised-tournament{
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-
+.main-container-organised-tournament {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
 }
-.container-organised-tournament{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+.container-organised-tournament {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
-.box-organised-tournament{
-    width: 90%;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    
-
+.box-organised-tournament {
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
-h1{
-    padding: 80px 15px;
-    font-size: 1.5rem;
-    font-weight: 500;
-    margin-right: auto;
+h1 {
+  width: 90%;
+  margin-left: auto;
+  padding-top: 80px;
 }
 
 /* CARD TOURNAMENT */
@@ -48,7 +45,6 @@ h1{
 .card-tournament {
   width: 325px;
   height: 425px;
-  max-width: 100%;
   margin: 2rem 0.5rem;
   background-color: #232f65;
   border-radius: 10px;
@@ -63,85 +59,79 @@ h1{
   height: 100%;
   text-decoration: none;
 }
-  .card-tournament:hover {
-    cursor: pointer;
-    box-shadow: 0 0 20px 1px rgb(158, 219, 52, 0.1);
-    transition: all 0.3s ease;
-    transform: translateY(2px);
-  }
-  .banner-card-tournament {
-    width: 100%;
-    height: 30%;
-    background-image: url("../img/General/MiniBannière-lol323x100.webp");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 10px;
-  }
-  
-  .card-tournament h4 {
-    width: 90%;
-    font-size: 1.2rem;
-    margin: 15px 5px ;
-  }
-  .card-tournament h5 {
-    margin-left: 10px;
-    font-weight: 400;
-    font-size: 1rem;
-  }
-  .card-tournament h6 {
-    margin-left: 10px;
-    font-weight: 500;
-  
-    font-size: 1.2rem;
-  }
-  .info-date-tournament {
-    width: 90%;
-    margin: 40px auto 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .info-date-tournament p {
-    font-size: 0.8rem;
-    margin: 0 6px;
-    text-align: center;
-  }
-  .info-date-tournament p:last-child {
-    min-width: 25%;
-    height: 24px;
-    background-color: #20a55c;
-    font-size: 11px;
-    padding-top: 6px;
-    border-radius: 15px;
-  }
-  .divider-card {
-    width: 100%;
-    height: 1px;
-    margin: 20px 0;
-    background-color: rgb(0, 0, 0, 50%);
-  }
+.card-tournament:hover {
+  cursor: pointer;
+  box-shadow: 0 0 20px 1px rgb(158, 219, 52, 0.1);
+  transition: all 0.3s ease;
+  transform: translateY(2px);
+}
+.banner-card-tournament {
+  width: 100%;
+  height: 30%;
+  background-image: url("../img/General/MiniBannière-lol323x100.webp");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 10px;
+}
 
+.card-tournament h4 {
+  width: 90%;
+  font-size: 1.2rem;
+  margin: 15px 5px;
+}
+.card-tournament h5 {
+  margin-left: 10px;
+  font-weight: 400;
+  font-size: 1rem;
+}
+.card-tournament h6 {
+  margin-left: 10px;
+  font-weight: 500;
 
+  font-size: 1.2rem;
+}
+.info-date-tournament {
+  width: 90%;
+  margin: 40px auto 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.info-date-tournament p {
+  font-size: 0.8rem;
+  margin: 0 6px;
+  text-align: center;
+}
+.info-date-tournament p:last-child {
+  min-width: 25%;
+  height: 24px;
+  background-color: #20a55c;
+  font-size: 11px;
+  padding-top: 6px;
+  border-radius: 15px;
+}
+.divider-card {
+  width: 100%;
+  height: 1px;
+  margin: 20px 0;
+  background-color: rgb(0, 0, 0, 50%);
+}
 
-
-
-
-  
 @media (min-width: 768px) {
-    .container-organised-tournament{
-        width: 80%;
-    }
+  .container-organised-tournament {
+    width: 80%;
+  }
 }
-@media (min-width: 1024px)  {
-    .container-organised-tournament{
-        width: 85%;
-    }
+@media (min-width: 1024px) {
+  .container-organised-tournament {
+    width: 85%;
+  }
 }
-@media (min-width: 1300px)  {
+@media (min-width: 1300px) {
 }
 @media (min-width: 1595px) {
-    /* CARD TOURNAMENT */
+  /* CARD TOURNAMENT */
   .card-tournament {
     width: 350px;
     height: 500px;
@@ -188,9 +178,7 @@ h1{
   }
 }
 
-
-
-  /* 
+/* 
 @media (min-width: 768px) {
 }
 @media (min-width: 1024px)  {
