Fin de conception de la page Tournamentmanagement.html et allegement du css de l'index.html

--- a/assets/css/profilPrivate.css
+++ b/assets/css/profilPrivate.css
@@ -275,7 +275,7 @@ input, select{
 .info-date-tournament p:last-child {
   min-width: 25%;
   height: 24px;
-  background-color: #20a55c;
+  background-color: #DD0606;
   font-size: 11px;
   padding-top: 6px;
   border-radius: 15px;
