--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -17,6 +17,9 @@ header {
   width: 100%;
   height: 100vh;
 }
+footer {
+  margin-top: 100px;
+}
 .block {
   display: block;
   width: 100%;
@@ -65,90 +68,6 @@ header {
 .btn-1.active .lign:nth-child(3) {
   top: 20px;
   transform: rotate(-135deg);
-}
-
-/* navbar TOP*/
-.nav-top {
-  z-index: 2;
-  width: 100%;
-  height: 60px;
-  background-color: #28303f;
-  position: fixed;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.logo-nav {
-  width: 100px;
-  height: 90%;
-  margin-right: 9px;
-  border-radius: 5px;
-}
-
-/* NAVBAR SIDE */
-.navbar-side {
-  padding: 5rem 0 0 1rem;
-  background-color: #28303f;
-  position: fixed;
-  width: 200px;
-  height: 100vh;
-  display: flex;
-  flex-wrap: wrap;
-  visibility: hidden;
-  transition: all 0.4s ease-in; /* si je met transform ne fonctionne pas sur le retour (-250px) ??*/
-  transform: translateX(-250px);
-}
-.logo-side-navbar {
-  width: 275px;
-  height: 160px;
-  background-image: url("../img/Desktop/logo270x125.webp");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  display: none;
-}
-.navbar-side ul {
-  width: 100%;
-}
-.navbar-side ul li {
-  width: 100%;
-  margin-bottom: 1rem;
-  list-style: none;
-}
-.navbar-side ul li img {
-  width: 16px;
-  height: 16px;
-}
-
-.navbar-side ul li a {
-  font-size: 1rem;
-  text-decoration: none;
-  color: #4d596f;
-  cursor: pointer;
-  margin-left: 0.5rem;
-}
-.navbar-side ul li a:visited {
-  color: #9fa5b2;
-}
-.navbar-side ul li a:hover {
-  color: #fff;
-}
-.divider-nav {
-  width: 75% !important;
-  height: 2px;
-  margin: auto;
-  background-color: rgb(255, 255, 255, 75%);
-}
-.navbar-side ul:nth-child(2) {
-  display: flex;
-  flex-wrap: wrap;
-  align-content: flex-end;
-  margin-bottom: 25px;
-}
-
-.visible {
-  visibility: visible;
-  transform: translateX(0px);
 }
 
 /* BANNER SLOGAN & CTA HEADER*/
@@ -361,83 +280,8 @@ option:hover {
   background-color: rgb(0, 0, 0, 50%);
 }
 
-/* FOOTER */
-footer {
-  width: 100%;
-  height: 40vh;
-  background-color: #1e283d;
-  text-align: center;
-  padding-top: 15px;
-  display: flex;
-  justify-content: flex-end;
-}
-footer h3 {
-  font-size: 21px;
-}
-.container-footer {
-  width: 100%;
-  height: 100%;
-}
-.contact {
-  height: 80%;
-}
-.divider-footer {
-  width: 50%;
-  height: 2px;
-  background: #f2f2f2;
-  margin: 10px auto;
-}
-footer p {
-  font-size: 1rem;
-  margin: 8px 0;
-}
-footer a {
-  margin-bottom: 20px;
-  margin-right: 10px;
-}
-
-.copyright {
-  width: 100%;
-  height: 20%;
-  background-color: #151b27;
-  display: flex;
-  align-items: center;
-}
-.copyright p {
-  width: 100%;
-  font-size: 0.8rem;
-  text-align: center;
-}
-
 /* MEDIA QUERIES */
-@media (min-width: 700px) {
-  .nav-top {
-    display: none;
-  }
-  /* NAVBAR SIDE */
-  .navbar-side {
-    padding: 0;
-    width: 20%;
-    visibility: visible;
-    transition: none;
-    transform: translateX(0px);
-  }
-  .navbar-side ul li a {
-    font-size: 0.8rem;
-  }
-  .logo-side-navbar {
-    width: 100%;
-    height: 120px;
-    background-image: url("../img/Desktop/logo270x125.webp");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    object-fit: contain;
-    display: block;
-  }
-  .navbar-side ul li img {
-    margin-left: 10px;
-  }
+@media (min-width: 768px) {
   /* HEADER */
   header {
     height: 70vh;
@@ -496,39 +340,27 @@ footer a {
   .container-header h2 {
     font-size: 1.1em;
   }
-  .container-footer {
-    width: 80%;
-    height: 100%;
-  }
-
-  .divider-footer {
-    width: 30%;
-  }
 }
 
 @media (min-width: 1024px) {
   .container-header h2 {
     font-size: 22px;
   }
-  .navbar-side ul li a {
-    font-size: 1rem;
-  }
 }
 @media (min-width: 1300px) {
-  .container-header h2 {
-    font-size: 1.5rem;
+  .container-header {
+    width: 85%;
   }
-  .navbar-side ul li a {
-    font-size: 1.2rem;
+  label {
+    width: 28.35%;
+  }
+
+  .container-header h2 {
+    width: 85%;
+    font-size: 1.5rem;
   }
   select {
     font-size: 1.2rem;
-  }
-  .divider-footer {
-    width: 20%;
-  }
-  .logo-side-navbar {
-    height: 150px;
   }
 }
 @media (min-width: 1418px) {
@@ -539,6 +371,11 @@ footer a {
 }
 
 @media (min-width: 1595px) {
+  main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+  }
   .container-header {
     width: 85%;
   }
@@ -555,18 +392,6 @@ footer a {
     height: 60px;
     font-size: 1.5rem;
   }
-  .navbar-side {
-    width: 15%;
-  }
-  .navbar-side ul li a {
-    font-size: 1.3rem;
-  }
-  .navbar-side ul li img {
-    margin-left: 10px;
-  }
-  .logo-side-navbar {
-    height: 150px;
-  }
   select {
     height: 60px;
     font-size: 1.3rem;
@@ -574,8 +399,12 @@ footer a {
   label {
     width: 28.3%;
   }
-  .container-tournament-mostPopular {
+  .main-container-tournament {
     width: 85%;
+    justify-content: center;
+  }
+  .container-tournament-mostPopular {
+    width: 90%;
   }
   .container-tournament-mostPopular h3 {
     font-size: 32px;
@@ -625,26 +454,5 @@ footer a {
     height: 1px;
     margin: 25px 0;
     background-color: rgb(0, 0, 0, 50%);
-  }
-  .container-footer {
-    width: 85%;
-  }
-
-  footer p {
-    font-size: 1rem;
-    margin: 10px 0;
-  }
-  footer h3 {
-    font-size: 2rem;
-  }
-
-  .copyright p {
-    width: 100%;
-    font-size: 1rem;
-    text-align: center;
-  }
-  .divider-footer {
-    width: 20%;
-    margin: 10px auto;
   }
 }
