--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -149,7 +149,7 @@
   }
   .logo-side-navbar {
     width: 100%;
-    height: 120px;
+    height: 100px;
     background-image: url("../img/Desktop/logo270x125.webp");
     background-position: center;
     background-repeat: no-repeat;
@@ -168,13 +168,16 @@
   .navbar-side {
     width: 20%;
   }
+  .logo-side-navbar {
+    height: 120px;
+  }
 }
 @media (min-width: 1300px) {
   .navbar-side ul li a {
     font-size: 1.2rem;
   }
   .logo-side-navbar {
-    height: 150px;
+    height: 120px;
   }
   .navbar-side {
     width: 15%;
