--- a/assets/css/organised&SubTournament.css
+++ b/assets/css/organised&SubTournament.css
@@ -13,6 +13,9 @@ body {
   width: 100%;
   background-color: #151b27;
 }
+footer{
+  margin-top: 100px;
+}
 
 /* SECTION MAIN */
 .main-container-organised-tournament {
