--- a/assets/css/tournamentManagement.css
+++ b/assets/css/tournamentManagement.css
@@ -8,7 +8,7 @@
   font-family: "Roboto Condensed", sans-serif;
   font-optical-sizing: auto;
   color: #f2f2f2;
-  text-shadow: 0 0 10px rgb(0, 0, 0);
+  text-shadow: 0 0 10px rgb(0, 0, 0, 0.6);
 }
 body {
   background-color: #151b27;
@@ -21,30 +21,60 @@ main {
   flex-wrap: wrap;
   justify-content: flex-end;
 }
+footer{
+  margin-top: 100px;
+}
 h1 {
   width: 100%;
   margin: 0 auto;
   padding: 5rem 0 0 2rem;
   font-size: 2rem;
 }
+
+img {
+  cursor: pointer;
+}
+.green{
+  color: #50B649;
+}
+.red{
+  color: #DD0606;
+}
+.orange{
+  color: #E96512;
+}
+.blue{
+  color: #33B1FF;
+}
+.discord{
+  overflow-x: auto; /* Scroll horizontal */
+
+}
+
 /* TOGGLE MENU DEROULANT  */
 .active-sheet-tournament {
   display: none;
 }
-
 .main-container-tournament-management {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
+
 /* CONTAINER INFO GENERAL */
 .info-general-tournament-management {
-  width: 80%;
+  width: 90%;
   margin-top: 2rem;
   background-color: #232f65;
   border: 1px solid black;
   box-shadow: 0 0 15px rgb(0, 0, 0, 55%);
+}
+.container-info-description{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 /* titre et image information générale */
@@ -63,11 +93,14 @@ h1 {
 .title-sheet-tournament h2 {
   font-size: 18px;
 }
+.card-tournament-management{
+  width: 100%;
+}
 .card-tournament-management img {
   width: 100%;
 }
-/* box information générale */
 
+/* box information générale */
 .info-card {
   width: 90%;
   margin: auto;
@@ -80,6 +113,7 @@ h4 {
   margin: 15px 0 30px;
   font-size: 1.3rem;
 }
+
 /* divider vertical de la box info general  */
 .container-divider-card {
   display: flex;
@@ -99,10 +133,14 @@ h4 {
   margin-right: 10px;
   font-weight: bolder;
   color: rgb(19, 113, 61);
+  font-size: 1.5rem;
 }
 #total-players {
   margin-left: 10px;
+  font-size: 1.5rem;
+
 }
+
 /* DIVIDER  horizontal BOX INFO GENERALE */
 .divider-sheet-tournament-first {
   width: 90%;
@@ -116,13 +154,18 @@ h4 {
   background-color: #fff;
   margin: 50px auto;
 }
-.container-info .divider-sheet-tournament:nth-child(1) {
+.divider-sheet-tournament:nth-child(1) {
   margin-top: 50px auto;
 }
+
 /* BOX DES DESCRIPTION REGLES ET PRIX   */
 .description-tournament {
   width: 90%;
   margin: auto;
+}
+.description-tournament h3{
+  width: 90%;
+  margin: 20px auto;
 }
 .description-tournament p {
   width: 90%;
@@ -136,7 +179,8 @@ h4 {
 .container-cta {
   display: flex;
   justify-content: center;
-  width: 50%;
+  width: 40%;
+  min-width: 150px;
   margin: 40px auto 20px;
 }
 .cta {
@@ -153,11 +197,242 @@ h4 {
 .cta a {
   text-decoration: none;
 }
-
 .cta:active {
   transform: translateY(1px);
   box-shadow: 0 0 10px 2px rgb(158, 219, 52);
 }
+
+/* CONTAINER DE LA SECTION PARTICIPANT ET INSCRIPTION */
+.tournament-management {
+  width: 90%;
+  margin-top: 2rem;
+}
+
+/* BOX PLAYERS */
+span {
+  font-size: 2rem;
+  font-weight: bold;
+}
+.players {
+  margin-bottom: 2rem;
+  background-color: #232f65;
+  border: 1px solid black;
+  box-shadow: 0 0 15px rgb(0, 0, 0, 55%);
+  padding-bottom: 40px;
+}
+
+/* BOX TOP players */
+.top-box-players {
+  display: flex;
+  justify-content: center;
+  padding-top: 30px;
+  width: 90%;
+  margin: 0 auto 30px;
+}
+.number-tournament {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: end;
+  justify-content: center;
+  width: 49%;
+  margin: 0 0.5%;
+  max-width: 400px;
+  aspect-ratio: 1.5;
+  border: 1px solid black;
+  box-shadow: 0 0 15px rgb(0, 0, 0, 45%);
+  padding-bottom: 10px;
+}
+.number-tournament p {
+  width: 100%;
+  text-align: center;
+}
+
+/* BOX BOTTOM */
+.bottom-box-players {
+  width: 90%;
+  margin: auto;
+  padding-bottom: 30px;
+  border: 1px solid black;
+  box-shadow: 0 0 15px rgb(0, 0, 0, 45%);
+}
+.title-bottom-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 10px;
+
+  border-bottom: 1px solid black;
+}
+
+/* button ajouter  */
+.add {
+  font-size: 1rem;
+  width: 80px;
+  height: 20px;
+  border-radius: 20px;
+  color: rgb(158, 219, 52);
+  background-color: #001c61;
+  box-shadow: 0 0 10px rgb(158, 219, 52, 0.8);
+  transition: all 0.3s ease, box-shadow 0.3s ease;
+  border: none;
+  margin-right: 10px;
+}
+.add a {
+  text-decoration: none;
+}
+.add:active {
+  transform: translateY(1px);
+  box-shadow: 0 0 10px 2px rgb(158, 219, 52);
+}
+
+/* tableau des joueurs inscrit */
+.table-players {
+  width: 90%;
+  margin: auto;
+  font-weight: 0;
+  border-collapse: collapse;
+}
+.table-players tr {
+  width: 100%;
+}
+input {
+  width: 20px;
+  height: 20px;
+}
+.table-players tr th {
+  font-weight: lighter;
+  padding: 20px 0 10px 0;
+  border-bottom: 1px solid #f2f2f2;
+  text-align: left;
+  font-size: 18px;
+}
+.table-players tr td {
+  padding: 15px 0;
+  font-size: 18px;
+}
+.table-players tr th:nth-child(1) {
+  width: 20%;
+}
+.table-players tr th:nth-child(2) {
+  width: 60%;
+}
+.table-players tr th:nth-child(3) {
+  width: 20%;
+}
+.table-players tr td {
+  border-bottom: 1px solid #f2f2f2;
+}
+.table-players tr td img {
+  width: 20px;
+}
+/* BOX REGISTRATION */
+.registration {
+  margin-bottom: 2rem;
+  background-color: #232f65;
+  border: 1px solid black;
+  box-shadow: 0 0 15px rgb(0, 0, 0, 55%);
+  padding-bottom: 40px;
+}
+/* BOX TOP registration*/
+.number-registration {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: end;
+  justify-content: center;
+  width: 49%;
+  margin: 0 0.5%;
+  max-width: 400px;
+  aspect-ratio: 1.5;
+  border: 1px solid black;
+  box-shadow: 0 0 15px rgb(0, 0, 0, 45%);
+  padding-bottom: 10px;
+}
+.top-box-registration {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-top: 30px;
+  width: 90%;
+  margin: 0 auto 30px;
+}
+.number-registration p {
+  width: 100%;
+  text-align: center;
+}
+/* BOX BOTTOM registration */
+.bottom-box-registration {
+  width: 90%;
+  margin: auto;
+  padding-bottom: 30px;
+  border: 1px solid black;
+  box-shadow: 0 0 15px rgb(0, 0, 0, 45%);
+}
+/* tableau des joueurs en attente de validation*/
+.table-registration {
+  width: 90%;
+  margin: auto;
+  font-weight: 0;
+  border-collapse: collapse;
+}
+.table-registration tr {
+  width: 100%;
+}
+input {
+  width: 20px;
+  height: 20px;
+}
+.table-registration tr th {
+  font-weight: lighter;
+  padding: 20px 0 10px 0;
+  border-bottom: 1px solid #f2f2f2;
+  text-align: left;
+  font-size: 18px;
+}
+.table-registration tr td {
+  padding: 15px 0;
+}
+.table-registration tr th:nth-child(1) {
+  width: 60%;
+}
+.table-registration tr th:nth-child(2) {
+  width: 20%;
+  text-align: center;
+  font-weight: bold;
+}
+.table-registration tr th:nth-child(3) {
+  width: 20%;  
+  text-align: center;
+  font-weight: bold;
+  
+}
+.table-registration tr td {
+  border-bottom: 1px solid #f2f2f2;
+  font-size: 18px;
+  
+}
+.table-registration tr td:nth-child(2) {
+  text-align: center;
+  
+}
+.table-registration tr td:nth-child(3) {
+  text-align: center;
+  
+}
+.table-registration tr td img {
+  width: 20px;
+}
+/* AUTO ACCEPT */
+.auto-accept{
+  width: 90%;
+  margin: 30px auto 0;
+}
+.auto-accept p{
+  margin-bottom: 10px;
+}
+.auto-accept input{
+  margin : 0 10px 0 40px
+}
+
 
 @media (min-width: 768px) {
   h1 {
@@ -167,23 +442,25 @@ h4 {
   .main-container-tournament-management {
     width: 80%;
   }
+
   /* CONTAINER INFO GENERAL */
   .info-general-tournament-management {
+    width: 90%;
+  }
+
+  /* CONTAINER DE LA SECTION PARTICIPANT ET INSCRIPTION */
+  .tournament-management {
     width: 90%;
   }
 }
 
 @media (min-width: 1024px) {
-
-}
-@media (min-width: 1300px) {
-  h1 {
-    font-size: 2rem;
+  .dropdown{
+    display: none;
   }
-  .main-container-tournament-management {
-    width: 85%;
+  .tournament-management{
+    display: flex;
   }
-
   /* SEPARATION DE LA BOX LEFT ET RIGHT DE LA SECTION INFORMATION GENERALE  */
   .container-info-description {
     display: flex;
@@ -199,13 +476,27 @@ h4 {
     width: 40%;
     margin: 0;
   }
-
-  /* hide divider */
-  .divider-sheet-tournament-first {
+  .players{
+    width: 49%;
+  }
+  .registration{
+    width: 49%;
+    margin-left: 2%;
+  }
+   /* hide divider */
+   .divider-sheet-tournament-first {
     display: none;
   }
   .divider-sheet-tournament {
     display: none;
+  }
+}
+@media (min-width: 1300px) {
+  h1 {
+    font-size: 2rem;
+  }
+  .main-container-tournament-management {
+    width: 85%;
   }
 
 }
@@ -213,7 +504,15 @@ h4 {
   h1 {
     font-size: 3rem;
   }
+  span{
+    font-size: 2.5rem;
+  }
+  /* CONTAINER INFO GENERAL */
   .info-general-tournament-management {
-    width: 70% ;
+    width: 70%;
+  }
+  /* CONTAINER DE LA SECTION PARTICIPANT ET INSCRIPTION */
+  .tournament-management {
+    width: 70%;
   }
 }
