--- a/assets/css/tournamentTree.css
+++ b/assets/css/tournamentTree.css
@@ -1,37 +1,18 @@
-/* General */
-*,
-::before,
-::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: "Roboto Condensed", sans-serif;
-  font-optical-sizing: auto;
-  color: #f2f2f2;
-  text-shadow: 0 0 10px rgb(0, 0, 0);
-}
-body {
-  background-color: #151b27;
-  width: 100%;
-  height: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 .main-container-tree-tournament {
-  width: 100vw;
+  width: 100%;
   height: auto;
   overflow: auto;
 }
+
 
 /* Container des titres des grilles */
 .main-container-round-title {
   background-color: #232f65;
   display: flex;
-  width: 100%;
+  width: 1024px;
   height: 80px;
-  min-width: 1024px;
-  max-width: 2500px;
+  /* min-width: 1024px;
+  max-width: 2500px; */
   align-items: center;
 }
 .container-round-title {
@@ -53,9 +34,9 @@ body {
 .container-tree-tournament {
   display: grid;
   grid-template-columns: repeat(5, 20%);
-  width: 100%;
-  min-width: 1024px;
-  max-width: 2500px;
+  width: 1024px;
+  /* min-width: 1024px;
+  max-width: 1024px; */
   height: auto;
   background-color: #232f65;
 }
@@ -111,3 +92,27 @@ body {
   border-left: 1px solid #f2f2f2;
   font-weight: 800;
 }
+
+
+/* SECTION SVG */
+
+.container-tree-tournament {
+    position: relative; /* Nécessaire pour que SVG se superpose correctement */
+  }
+.tournament-lines {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 1;
+    overflow: visible;
+  }
+  
+  .tournament-lines line {
+    stroke: #f2f2f2;
+    stroke-width: 2;
+    stroke-linecap: round;
+  }
+  
