--- a/assets/css/tournamentManagement.css
+++ b/assets/css/tournamentManagement.css
@@ -183,14 +183,14 @@ h4 {
 }
 
 /* BUTTON MODIFIER */
-.container-cta {
+.container-button-info-general {
   display: flex;
   justify-content: center;
   width: 40%;
   min-width: 150px;
   margin: 40px auto 20px;
 }
-.cta {
+.button-info-general {
   font-size: 1rem;
   width: 150px;
   height: 40px;
@@ -201,7 +201,7 @@ h4 {
   transition: all 0.3s ease, box-shadow 0.3s ease;
   border: none;
 }
-.cta a {
+.button-info-general a {
   display: inline-block;
   width: 100%;
   height: 40px;
@@ -209,12 +209,12 @@ h4 {
   text-decoration: none;
   color: #f2f2f2;
 }
-.cta:active {
+.button-info-general:active {
   transform: translateY(3px);
   box-shadow: 0 0 10px 2px rgb(158, 219, 52);
   
 }
-.cta:hover{
+.button-info-general:hover{
   box-shadow: 0 0 10px rgb(158, 219, 52, 1);
 }
 
